# langscrape

./: .gitignore  README.md  log_summary.py  pyproject.toml  requirements.txt  run_ui.py  setup.sh  test.py  test2.py  tests.py
config/: allowed_tags.py  default_config.yaml
feilian/: soup_tools.py
langscrape/: __init__.py  errors.py  exceptions.py  json.py  logging.py  printer.py  tags.py  utils.py  warnings.py
langscrape/agent/: graph.py  state.py  tools.py
langscrape/browser/: chrome.py  request.py
langscrape/html/: utils.py  xpath_extractor.py
langscrape/nodes/: call_model.py  data_collator.py  extraction_reasoner.py  feature_binder.py  html_fetcher.py  output_formatter.py  post_processor.py  summarizer.py  summarizer_prompt_builder.py  url_handler.py
langscrape/pdf/: __init__.py  pdf_utils.py
langscrape/webapp/: __init__.py  app.py  pipeline.py
langscrape/webapp/templates/: index.html
notebooks/: data_to_xlsx.ipynb  json_to_xlsx.ipynb  meta_data_extractor.ipynb  playgroung.ipynb  str_to_list.ipynb  xlsx_to_jsonl.ipynb
scripts/: run.py
tests/: test_full_graph.py  test_graph.py  test_graph_to_png.py  test_one_url.py  test_pdf.py  test_pdf_graph.py  test_pipeline.py  test_utils.py
